Fixed horizontal scrolling bug + reinstated normal About page text
+ horizontal scrolling bug was due to bootstrap LESS file
grid-framework.less
+ overwritten padding-left & padding-right ; set to 0 ; added in
header.css

--- a/realestate/static/realestate/css/header.css
+++ b/realestate/static/realestate/css/header.css
@@ -24,3 +24,7 @@
     width: 121.5px;
     height: 178.125px;
 }
+.row{
+    margin-left:0px;
+    margin-right:0px;
+}
